--- a/movies/pyproject.toml
+++ b/movies/pyproject.toml
@@ -16,6 +16,9 @@ dependencies = [
     "pytest (>=8.4.1,<9.0.0)",
     "pytest-django (>=4.11.1,<5.0.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
+    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
+    "pillow (>=11.2.1,<12.0.0)",
+    "requests (>=2.32.4,<3.0.0)",
 ]
 
 [tool.poetry]
