--- a/movies/pyproject.toml
+++ b/movies/pyproject.toml
@@ -10,8 +10,6 @@ requires-python = ">=3.12"
 dependencies = [
     "django (>=5.2.3,<6.0.0)",
     "djangorestframework (>=3.16.0,<4.0.0)",
-    "black (>=25.1.0,<26.0.0)",
-    "isort (>=6.0.1,<7.0.0)",
     "python-dotenv (>=1.1.0,<2.0.0)",
     "pytest (>=8.4.1,<9.0.0)",
     "pytest-django (>=4.11.1,<5.0.0)",
@@ -20,6 +18,12 @@ dependencies = [
     "pillow (>=11.2.1,<12.0.0)",
     "requests (>=2.32.4,<3.0.0)",
 ]
+
+[tool.poetry.group.dev.dependencies]
+flake8 = "^7.3.0"
+black = "^25.1.0"
+isort = "^6.0.1"
+pylint = "^3.3.7"
 
 [tool.poetry]
 packages = [{include = "movies"}]
