--- a/movies/pytest.ini
+++ b/movies/pytest.ini
@@ -1,2 +1,11 @@
 [pytest]
 python_files = test_*.py *_tests.py
+
+[flake8]
+exclude =
+    migrations
+    __pycache__
+    manage.py
+    settings.py
+    env
+    .env
