--- a/movies/.env.template
+++ b/movies/.env.template
@@ -1,3 +1,8 @@
 DJANGO_SECRET_KEY="your-secret-key-here"
 DJANGO_DEBUG="True"
 TMDB_API_KEY="your-tmdb-api-key-here"
+POSTGRES_DB=""
+POSTGRES_USER=""
+POSTGRES_PASSWORD=""
+POSTGRES_HOST=""
+POSTGRES_PORT=""
