--- a/movies/pyproject.toml
+++ b/movies/pyproject.toml
@@ -24,6 +24,7 @@ flake8 = "^7.3.0"
 black = "^25.1.0"
 isort = "^6.0.1"
 pylint = "^3.3.7"
+pytest-cov = "^6.2.1"
 
 [tool.poetry]
 packages = [{include = "movies"}]
