--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -41,4 +41,4 @@ jobs:
           cd movies
           sudo apt-get update
           sudo apt-get install -y docker-compose
-          docker-compose up --build
+          docker-compose --build
